--- a/.github/workflows/minimal.yml
+++ b/.github/workflows/minimal.yml
@@ -75,7 +75,7 @@ jobs:
         with:
           toolchain: ${{ matrix.rust }}
 
-      - name: Run cargo test (test-net-private)
+      - name: Run cargo test (test-net-privat)
         run: cargo test --features test-net,test-net-private
         env:
           DKREG_QUAY_USER: ${{ secrets.DKREG_QUAY_USER }}
