--- a/.github/workflows/minimal.yml
+++ b/.github/workflows/minimal.yml
@@ -57,6 +57,7 @@ jobs:
   test-net-private:
     name: Test Suite (network-enabled tests)
     runs-on: ubuntu-latest
+    environment: secret
     strategy:
       matrix:
         rust:
